flux/apps/base/microrealestate/authenticator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: authenticator
  name: authenticator
  namespace: microrealestate
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: authenticator
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yml convert
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: authenticator
    spec:
      containers:
        - env:
            - name: ACCESS_TOKEN_SECRET
              value: access_token_secret
            - name: APPCREDZ_TOKEN_SECRET
              value: appcredz_token_secret
            - name: APP_DOMAIN
              value: microrealestate.zshen.me
            - name: APP_PROTOCOL
              value: https
            - name: EMAILER_URL
              value: https://microrealestate.zshen.me/emailer
            - name: LOGGER_LEVEL
              value: info
            - name: MONGO_URL
              valueFrom:
                secretKeyRef:
                  name: microrealestate-secrets
                  key: mongo-url
            - name: NODE_ENV
              value: production
            - name: PORT
              value: "8000"
            - name: REDIS_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: microrealestate-secrets
                  key: redis-password
            - name: REDIS_URL
              value: redis://redis-master.redis.svc.cluster.local:6379
            - name: REFRESH_TOKEN_SECRET
              value: refresh_token_secret
            - name: RESET_TOKEN_SECRET
              value: reset_token_secret
            - name: SIGNUP
              value: "true"
          image: ghcr.io/microrealestate/microrealestate/authenticator:latest
          name: authenticator
          ports:
            - containerPort: 8000
              protocol: TCP
      restartPolicy: Always
