flux/apps/base/microrealestate/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: gateway
  name: gateway
  namespace: microrealestate
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gateway
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yml convert
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: gateway
    spec:
      containers:
        - env:
            - name: API_URL
              value: http://api:8200/api/v2
            - name: APP_DOMAIN
              value: localhost
            - name: AUTHENTICATOR_URL
              value: http://authenticator.microrealestate.svc.cluster.local:8000
            - name: CORS_ENABLED
              value: "true"
            - name: EMAILER_URL
              value: http://emailer.microrealestate.svc.cluster.local:8400/emailer
            - name: EXPOSE_FRONTENDS
              value: "true"
            - name: LANDLORD_BASE_PATH
              value: /landlord
            - name: LANDLORD_FRONTEND_URL
              value: http://landlord-frontend.microrealestate.svc.cluster.local:8180
            - name: LOGGER_LEVEL
              value: info
            - name: NODE_ENV
              value: production
            - name: PDFGENERATOR_URL
              value: http://pdfgenerator.microrealestate.svc.cluster.local:8300/pdfgenerator
            - name: PORT
              value: "8080"
            - name: TENANTAPI_URL
              value: http://tenantapi.microrealestate.svc.cluster.local:8250/tenantapi
            - name: TENANT_BASE_PATH
              value: /tenant
            - name: TENANT_FRONTEND_URL
              value: http://tenant-frontend.microrealestate.svc.cluster.local:8190
          image: ghcr.io/microrealestate/microrealestate/gateway:latest
          name: gateway
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
