flux/apps/base/microrealestate/landlord-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: landlord-frontend
  name: landlord-frontend
  namespace: microrealestate
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: landlord-frontend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yml convert
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: landlord-frontend
    spec:
      containers:
        - env:
            - name: BASE_PATH
              value: /landlord
            - name: CORS_ENABLED
              value: "true"
            - name: DOCKER_GATEWAY_URL
              value: https://gateway.microrealestate.svc.cluster.local:8080
            - name: GATEWAY_URL
              value: https://gateway.microrealestate.svc.cluster.local:8080
            - name: NODE_ENV
              value: production
            - name: PORT
              value: "8180"
            - name: SIGNUP
              value: "true"
          image: ghcr.io/microrealestate/microrealestate/landlord-frontend:latest
          name: landlord-frontend
          ports:
            - containerPort: 8180
              protocol: TCP
      restartPolicy: Always
