flux/apps/base/microrealestate/pdfgenerator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: pdfgenerator
  name: pdfgenerator
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pdfgenerator
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yml convert
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: pdfgenerator
    spec:
      containers:
        - env:
            - name: ACCESS_TOKEN_SECRET
              value: access_token_secret
            - name: CIPHER_IV_KEY
              value: cipher_iv_key
            - name: CIPHER_KEY
              value: cipher_key
            - name: LOGGER_LEVEL
              value: info
            - name: MONGO_URL
              value: mongodb://mongo/mredb
            - name: NODE_ENV
              value: production
            - name: PORT
              value: "8300"
            - name: UPLOAD_MAX_SIZE
              value: "2000000000"
          image: ghcr.io/microrealestate/microrealestate/pdfgenerator:latest
          name: pdfgenerator
          ports:
            - containerPort: 8300
              protocol: TCP
      restartPolicy: Always
