flux/apps/base/microrealestate/authenticator-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: authenticator
  name: authenticator
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: authenticator
