flux/apps/base/microrealestate/emailer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: emailer
  name: emailer
spec:
  ports:
    - name: "8400"
      port: 8400
      targetPort: 8400
  selector:
    io.kompose.service: emailer
