flux/apps/base/microrealestate/landlord-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: landlord-frontend
  name: landlord-frontend
spec:
  ports:
    - name: "8180"
      port: 8180
      targetPort: 8180
  selector:
    io.kompose.service: landlord-frontend
