flux/apps/base/microrealestate/pdfgenerator-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: pdfgenerator
  name: pdfgenerator
spec:
  ports:
    - name: "8300"
      port: 8300
      targetPort: 8300
  selector:
    io.kompose.service: pdfgenerator
