flux/apps/base/microrealestate/tenant-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: tenant-frontend
  name: tenant-frontend
  namespace: microrealestate
spec:
  ports:
    - name: "8190"
      port: 8190
      targetPort: 8190
  selector:
    io.kompose.service: tenant-frontend
