flux/apps/base/microrealestate/tenantapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: tenantapi
  name: tenantapi
spec:
  ports:
    - name: "8250"
      port: 8250
      targetPort: 8250
  selector:
    io.kompose.service: tenantapi
