flux/apps/base/microrealestate/frontend-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microrealestate
  namespace: microrealestate
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: An open-source application designed to assist landlords in managing their properties and rentals.
    gethomepage.dev/group: Applications
    gethomepage.dev/name: MicroRealEstate
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: microrealestate.zshen.me
      http:
        paths:
          - path: "/tenant"
            pathType: Prefix
            backend:
              service:
                name: tenant-frontend
                port:
                  number: 8190
    - host: microrealestate.zshen.me
      http:
        paths:
          - path: "/landlord"
            pathType: Prefix
            backend:
              service:
                name: landlord-frontend
                port:
                  number: 8180
  tls:
    - secretName: microrealestate-tls
      hosts:
        - microrealestate.zshen.me
